<resources>
    <string name="app_name">WallQuote</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_favorites">Favorites</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_language">Language settings</string>
    <string name="pref_notifications">Notifications</string>
    <string name="pref_contact_us">Contact Us</string>

    <string name="pref_language_summary">Choose the languages you would like to receive Quotes in..</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_language_recommendations">Choose the languages, you want to receive Quotes in..
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>


    <string-array name="pref_lang_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string-array name="pref_lang_list_titles">
        <item>Kannada</item>
        <item>Hindi</item>
        <item>English</item>
    </string-array>


    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Contact us</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_settings_screen">SettingsScreen</string>
    <string name="title_activity_favorite_images">FavoriteImages</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    //my settings pref
    <string name="pref_lang_profile">Language preference</string>
    <string name="pref_lang_profile_summary">Choose the languages you want to receive Quotes in</string>
    <string name="pref_lang_kannada">Kannada</string>
    <string name="pref_lang_hindi">Hindi</string>
    <string name="pref_lang_english">English</string>
    <string name="msg_subscribe_failed">Subscription failed</string>
</resources>
